@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [mms] Don&apos;t honor linked attachment limit configuration options if linked attachments are disabled (Bug #13665).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -3828,7 +3828,7 @@
    <date>2015-02-10</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [mms] Don&apos;t honor linked attachment limit configuration options if linked attachments are disabled (Bug #13665).
    </notes>
   </release>
  </changelog>
