@@ -2,6 +2,8 @@
 v6.2.8-git
 ----------
 
+[mms] Don't honor linked attachment limit configuration options if linked
+      attachments are disabled (Bug #13665).
 
 
 ------
